openbank-infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openbank
  labels:
    app.kubernetes.io/name: openbank
    app.kubernetes.io/component: platform
